2020-08-08 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix conversion to ratio
	* Replace J/T with A*m^2

2020-08-07 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add binary prefixes zebi and yobi
	* Hide composite SI units for which a specific name/symbol exist
	* Do not use prefixes by default with most CGS units
	* New composite units: cP, cStoke, mTorr, dyn/cm²
	* Digit grouping after decimal separator (in groups of three, when space is used as separator)
	* Use middle dot for multiplication and Unicode symbols for exponents 2 and 3 in composite units when Unicode is used

2020-08-05 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add kph/kmph (km/h)

2020-08-03 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix BYN exchange rate (was inverted)
	* Fix BYR exchange rate
	* Fix updating of BYN and BTC exchange rates
	* Fix update date for exchange rates not from ECB

2020-08-01 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add arcsin, arccos, arsinh, arcosh, etc. as names for inverse trigonometric and hyperbolic functions
	* Interpret sin^-1, cos^-1, etc. as inverse functions (arcsin, arccos, etc.)
	* Fix parsing of negative power in function arguments without parenthesis
	* Add deftorad() function

2020-07-28 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add Euler's totient function

2020-07-26 VicSanRoPe <?>

	* Spanish translation

2020-07-24 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Load custom exchange rates from LOCAL_DATA_DIR/custom_exchange_rates, with one "x ABC = y DEF" (e.g. "1USD=70.86RUB") on each row

2020-07-11 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Extend man page with commands, settings, syntax, and examples sections

2020-07-06 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Support use of right arrow (including "->") as alternative to "to" for conversion (e.g. 5m->ft)

2020-07-05 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Only apply PrintOptions::negative_exponents to units